--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background: rgb(54, 54, 54);
+    color:white ;
+    font-family: 'Holtwood One SC', serif;
+}
+
+.header{
+    margin-top: 9rem;
+}
 .jumbotron{
     background-image: url('../images/header_back.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    width: 100%;
+    height: 100vh;
 }
 .jumbotron::after{
     content:"";
@@ -36,4 +52,23 @@ header h1 {
 }
 header p {
     color:white
+}
+
+/*Main Section*/
+.main{
+    background-color: grey;
+    top: 0;
+}
+
+
+
+.menu{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/*FOOTER*/
+.contact{
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
