--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
     }
  }
 .jumbotron{
-    background-image: url('../images/header_back.jpg');
+    background-image: url('../images/header_back.webp');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -118,13 +118,13 @@ header p {
 
 .blog .hero-img{
     position: absolute;
-    right: 5rem;
+    right: 2rem;
     top: 16rem;
 }
 .blog .second-img{
     position: absolute;
-    bottom: -1rem;
-    left:27rem
+    bottom: -2rem;
+    left:24rem
 }
 
 
@@ -143,7 +143,7 @@ header p {
 .offers{
     width: 100%;
     height: 100vh;
-    background-image: url('../images/offer_img.jpg');
+    background-image: url('../images/offer_img.webp');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -182,16 +182,29 @@ header p {
     background-color: #EE9E1D;
     height: 50vh;
     width: 100%;
-    overflow: hidden;
+    position: relative;
 }
-.services .row{
+.services .container .row{
+    position: absolute;
+    top: -5em;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
+
+
+
 @media screen and (max-width: 780px) {
 
     .services img{
         display: none;
+    }
+    .services .container .row{
+        position: relative;
+        top: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
 }
@@ -221,5 +234,6 @@ header p {
     opacity: 0.6;
     transform: translateY(0.5rem);
 }
+
 
 
